// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.time.admin.v0;

import "google/protobuf/duration.proto";

// these structures are only used for where the configuration can be adjusted
// at runtime using the participant domain connectivity commands and services.
// however they are defined here in common to be sat alongside the scala definitions
// themselves.

message TimeProofRequestConfig {
  google.protobuf.Duration initialRetryDelay = 1;
  google.protobuf.Duration maxRetryDelay = 2;
  google.protobuf.Duration maxSequencingDelay = 3;
}

message DomainTimeTrackerConfig {
  google.protobuf.Duration observationLatency = 1;
  google.protobuf.Duration patienceDuration = 2;
  google.protobuf.Duration minObservationDuration = 3;
  TimeProofRequestConfig timeProofRequest = 4;
}
